# fastflowquery

./: .env.example  .gitignore  Cargo.toml  Contributing.md  Makefile  NOTICE  Readme.md  pyproject.toml
.github/workflows/: api-semver.yml  bench-13_3.yml  correctness-13_1.yml  docs-v2-guardrails.yml  feature-matrix.yml  integration-13_2.yml  python-wheels.yml  rustdoc.yml
crates/client/: Cargo.toml
crates/client/examples/: bench_join_bloom.rs  bench_join_radix.rs  bench_pipelined_shuffle_ttfr.rs  convert_tpch_tbl_to_parquet.rs  generate_bench_fixtures.rs  run_bench_13_3.rs
crates/client/src/: bench_fixtures.rs  bench_queries.rs  dataframe.rs  embedding.rs  engine.rs  expr.rs  ffi.rs  lib.rs  main.rs  physical_registry.rs  planner_facade.rs  python.rs  repl.rs  runtime.rs  runtime_tests.rs  session.rs  tpch_tbl.rs
crates/client/tests/: benchmark_fixtures_deterministic.rs  dataframe_write_api.rs  distributed_runtime_roundtrip.rs  embedded_case_expr.rs  embedded_cte_subquery.rs  embedded_cte_subquery_golden.rs  embedded_hash_aggregate.rs  embedded_hash_join.rs  embedded_parquet_scan.rs  embedded_parquet_sink.rs  embedded_two_phase_retrieval.rs  embedded_vector_topk.rs  embedded_window_functions.rs  embedded_window_golden.rs  integration_distributed.rs  integration_embedded.rs  integration_parquet_fixtures.rs  physical_registry.rs  public_api_contract.rs  qdrant_routing.rs  runtime_stats_plumbing.rs  tpch_catalog_profiles.rs  tpch_tbl_parquet_deterministic.rs  udf_api.rs
crates/client/tests/snapshots/aggregate/: hash_aggregate_count_sum_min_max_avg.snap
crates/client/tests/snapshots/integration/: embedded_core.snap
crates/client/tests/snapshots/join/: hash_join_broadcast_strategy_and_result.snap  hash_join_full_outer_correctness.snap  hash_join_left_outer_correctness.snap  hash_join_right_outer_correctness.snap  hash_join_shuffle_with_spill.snap
crates/client/tests/snapshots/subquery/: embedded_cte_subquery_edge_matrix.snap
crates/client/tests/snapshots/window/: embedded_window_edge_matrix.snap
crates/client/tests/support/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: adaptive.rs  config.rs  error.rs  ids.rs  lib.rs  memory.rs  metrics.rs  metrics_exporter.rs
crates/distributed/: Cargo.toml  build.rs
crates/distributed/proto/: ffq_distributed.proto
crates/distributed/src/: coordinator.rs  grpc.rs  lib.rs  stage.rs  worker.rs  worker_tests.rs
crates/execution/: Cargo.toml
crates/execution/src/: context.rs  exec.rs  exec_node.rs  expressions.rs  lib.rs  physical_registry.rs  stream.rs  udf.rs
crates/execution/src/expressions/: mod.rs
crates/planner/: Cargo.toml
crates/planner/src/: analyzer.rs  explain.rs  lib.rs  logical_plan.rs  optimizer.rs  physical_plan.rs  physical_planner.rs  sql_frontend.rs
crates/planner/tests/: optimizer_custom_rule.rs  optimizer_golden.rs  physical_plan_serde.rs
crates/planner/tests/snapshots/optimizer/: constant_folding_negative_non_literal_expr.snap  constant_folding_positive.snap  filter_merge_and_projection_pushdown.snap  filter_merge_negative_single_filter.snap  filter_merge_positive.snap  join_strategy_hint_broadcast_left.snap  join_strategy_hint_negative_falls_back_to_shuffle.snap  predicate_pushdown_negative_over_aggregate_output.snap  predicate_pushdown_positive.snap  projection_pushdown_negative_over_aggregate.snap  projection_pushdown_positive.snap  two_phase_rewrite_negative_missing_index_option.snap  two_phase_rewrite_positive.snap  vector_rewrite_negative_fallback_projection.snap  vector_rewrite_positive.snap
crates/shuffle/: Cargo.toml
crates/shuffle/src/: layout.rs  lib.rs  reader.rs  writer.rs
crates/sql/: Cargo.toml
crates/sql/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: catalog.rs  lib.rs  object_store_provider.rs  parquet_provider.rs  provider.rs  qdrant_provider.rs  stats.rs  vector_index.rs
docker/: ffq-distributed.Dockerfile
docker/compose/: ffq.yml
docs/dev/: api-semver-policy.md  ffi-c-api.md  missing-docs-backlog.md  python-bindings.md  rustdoc-style.md
docs/learn/: 01-query-lifecycle.md  02-optimizer-internals.md  03-physical-planning.md  04-execution-engine.md  05-distributed-stages-shuffle.md  06-control-plane.md  07-rpc-protocol.md  08-correctness-distributed.md  09-storage-catalog.md  10-vector-rag-internals.md  11-writes-commit.md  12-observability-debugging.md  13-extensibility-v2.md  14-runtime-portability-v2.md  15-api-bindings-v2.md  16-sql-semantics-v2.md  17-aqe-adaptive-shuffle-v2.md  18-join-system-v2.md  19-aggregation-v2.md  20-shuffle-distributed-v2.md  21-vector-rag-v2.md  README.md  faq.md  glossary.md
docs/learn/labs/: 01-single-node-query.md  02-distributed-run.md  (+3 more)
docs/v1/: README.md  architecture.md  benchmarks.md  client-runtime.md  distributed-runtime.md  integration-13.2.md  known-gaps.md  observability.md  operators-core.md  quickstart.md  repl.md  shuffle-stage-model.md  status-matrix.md  storage-catalog.md  testing.md  vector-rag.md  writes-dml.md
docs/v2/: README.md  adaptive-shuffle-tuning.md  aggregation-v2.md  api-contract.md  architecture.md  benchmarks.md  client-runtime.md  control-plane.md  custom-operators-deployment.md  distributed-capabilities.md  distributed-runtime.md  extensibility.md  ffi-python.md  integration-13.2.md  join-system-v2.md  known-gaps.md  migration-v1-to-v2.md  observability.md  operators-core.md  quickstart.md  repl.md  runtime-portability.md  shuffle-stage-model.md  sql-semantics.md  status-matrix.md  storage-catalog.md  testing.md  vector-rag.md  writes-dml.md
examples/c/: ffi_example.c
include/: ffq_ffi.h
python/ffq/: __init__.py
scripts/: build-tpch-dbgen.sh  check-bench-v2-pipelined-ttfr.py  compare-bench-13.3.py  convert-tpch-dbgen-parquet.sh  generate-bench-fixtures.sh  generate-tpch-dbgen-sf1.sh  run-bench-13.3.sh  run-bench-13.4-tpch-official.sh  run-bench-v2-adaptive-shuffle.sh  run-bench-v2-pipelined-shuffle.sh  run-bench-v2-window.sh  run-distributed-integration.sh  run-ffi-c-example.sh  run-repl-smoke.sh  validate-docs-v2.py  validate-tpch-dbgen-manifests.py
(+50 files in other folders)
