[package]
name = "ffq-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["core"]

# Core embedded runtime surface (library-first default).
core = ["embedded"]

# Legacy alias retained for compatibility with older scripts/tests.
embedded = []

# Optional preset for smallest practical runtime footprint.
minimal = ["core"]

# enables the optional dependency + turns on its grpc feature
distributed = ["dep:ffq-distributed", "ffq-distributed/grpc"]

vector = ["ffq-execution/vector", "ffq-planner/vector", "ffq-distributed?/vector"]
qdrant = ["ffq-storage/qdrant", "vector", "ffq-distributed?/qdrant"]
s3 = ["ffq-storage/s3"]
python = ["dep:pyo3"]
ffi = []
profiling = [
  "ffq-common/profiling",
  "ffq-execution/profiling",
  "ffq-distributed?/profiling",
]

[dependencies]
ffq-common = { path = "../common" }
ffq-sql = { path = "../sql" }
ffq-planner = { path = "../planner" }
ffq-execution = { path = "../execution" }
ffq-storage = { path = "../storage" }
ffq-shuffle = { path = "../shuffle" }

ffq-distributed = { path = "../distributed", optional = true }

arrow = { workspace = true, features = ["prettyprint"] }
arrow-schema.workspace = true
parquet.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dotenvy = "0.15"
rustyline = "14"
pyo3 = { version = "0.22", optional = true, features = ["macros", "abi3-py39"] }

[dev-dependencies]
tonic = "0.12"
