[package]
name = "ffq-distributed"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
grpc = ["dep:tokio", "dep:tonic", "dep:prost", "dep:tokio-stream"]

[dependencies]
ffq-common = { path = "../common" }
ffq-planner = { path = "../planner", default-features = false }
serde.workspace = true

tokio = { workspace = true, optional = true }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", optional = true }
