[package]
name = "ffq-distributed"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
grpc = ["dep:tokio", "dep:tonic", "dep:prost", "dep:tokio-stream"]

[dependencies]
ffq-common = { path = "../common" }
ffq-execution = { path = "../execution" }
ffq-planner = { path = "../planner", default-features = false }
ffq-shuffle = { path = "../shuffle" }
ffq-storage = { path = "../storage" }
arrow.workspace = true
arrow-schema.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true

tokio = { workspace = true, optional = true }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio-stream = { version = "0.1", optional = true }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
parquet.workspace = true
