[package]
name = "ffq-execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
vector = ["ffq-planner/vector"]

[dependencies]
ffq-common = { path = "../common" }
ffq-planner = { path = "../planner", default-features = false }

arrow.workspace = true
arrow-schema.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
