[package]
name = "ffq-planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
vector = []

[dependencies]
ffq-common = { path = "../common" }
ffq-sql = { path = "../sql" }
arrow-schema.workspace = true
serde.workspace = true
sqlparser = "0.51"

[dev-dependencies]
serde_json = "1"
