[package]
name = "ffq-planner"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
vector = []
approx = []

[dependencies]
ffq-common = { path = "../common" }
ffq-sql = { path = "../sql" }
arrow-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlparser = "0.51"

[dev-dependencies]
